plugins {
    id 'java'
    id 'maven-publish'
}

repositories {
    mavenCentral()
}

java {
    toolchain {
        languageVersion.set(JavaLanguageVersion.of(23))
    }
}

dependencies {
    implementation project(':reader-infra')
    testImplementation platform('org.junit:junit-bom:5.10.0')
    testImplementation 'org.junit.jupiter:junit-jupiter'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

test {
    useJUnitPlatform()
}

// Publishing metadata (configuration inherited from root project)
publishing {
    publications {
        maven(MavenPublication) {
            pom {
                name = 'Rege Core'
                description = 'Type-safe regular expression framework with Brzozowski derivatives and sealed type hierarchies'
            }
        }
    }
}
